--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "javascript-obfuscator": "^2.9.4",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-obfuscator": "^3.2.0",
     "ws": "^7.4.1"
   },
   "devDependencies": {},
