--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app/server.js",
     "build": "webpack",
     "build:w": "webpack -w"
   },
